--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,72 @@
-streamlit==1.30.0
-pillow==9.5.0
+aioice==0.10.1
+aiortc==1.10.1
+altair==5.5.0
+anyio==4.9.0
+attrs==25.3.0
+av==10.0.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.2
+dnspython==2.7.0
+filelock==3.18.0
+fsspec==2025.5.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-crc32c==1.7.1
+gradio_client==1.10.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.31.4
+idna==3.10
+ifaddr==0.2.0
+importlib_metadata==7.2.1
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.40.0
+numpy==2.2.6
 opencv-python==4.7.0.72
-numpy==1.24.3
+packaging==23.2
+pandas==2.2.3
+Pillow==9.5.0
+protobuf==4.25.7
+pyarrow==20.0.0
+pycparser==2.22
+pydeck==0.9.1
+pyee==13.0.0
+Pygments==2.19.1
+pylibsrtp==0.12.0
+pyOpenSSL==25.1.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
 requests==2.31.0
+rich==13.9.4
+rpds-py==0.25.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.30.0
+streamlit-webrtc==0.47.1
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.5
+tqdm==4.67.1
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+validators==0.35.0
+watchdog==6.0.0
+websockets==11.0.3
+zipp==3.21.0
