--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ numpy==2.2.6
 opencv-python==4.7.0.72
 packaging==23.2
 pandas==2.2.3
-Pillow==9.5.0
+pillow==11.2.1
 protobuf==4.25.7
 pyarrow==20.0.0
 pycparser==2.22
