--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.40.0
 numpy==2.2.6
+opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
 packaging==23.2
 pandas==2.2.3
