--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ mdurl==0.1.2
 narwhals==1.40.0
 numpy==2.2.6
 opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 packaging==23.2
 pandas==2.2.3
 pillow==11.2.1
